Update progress report 2020-11-29

--- a/docs/progressreport/index.bib
+++ b/docs/progressreport/index.bib
@@ -6,7 +6,57 @@
   year={2003}
 }
 
-@inproceedings{ref2,
+@article{ref2,
+  title={The principal type-scheme of an object in combinatory logic},
+  author={Hindley, Roger},
+  journal={Transactions of the american mathematical society},
+  volume={146},
+  pages={29--60},
+  year={1969},
+  publisher={JSTOR}
+}
+
+@article{ref3,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{ref4,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{ref5,
+  title={Proofs about a folklore let-polymorphic type inference algorithm},
+  author={Lee, Oukseh and Yi, Kwangkeun},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={20},
+  number={4},
+  pages={707--723},
+  year={1998},
+  publisher={ACM New York, NY, USA}
+}
+
+@book{ref6,
+  title={Top quality type error messages},
+  author={Heeren, Bastiaan J},
+  year={2005},
+  publisher={Utrecht University}
+}
+
+@inproceedings{ref7,
   title={TypeTool: A type inference visualization tool},
   author={Simoes, Hugo and Florido, Mário},
   booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
@@ -15,7 +65,7 @@
   organization={Citeseer}
 }
 
-@article{ref3,
+@article{ref8,
   title={TILC: The interactive lambda-calculus tracer},
   author={Ruiz, David and Villaret, Mateu},
   journal={Electronic Notes in Theoretical Computer Science},
@@ -25,7 +75,7 @@
   publisher={Elsevier}
 }
 
-@inproceedings{ref4,
+@inproceedings{ref9,
   title={TypeTool: A type inference visualization tool},
   author={Simoes, Hugo and Florido, Mário},
   booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
@@ -34,7 +84,7 @@
   organization={Citeseer}
 }
 
-@article{ref5,
+@article{ref10,
   title={A visualisation of polymorphic type checking},
   author={Jung, Yang and Michaelson, Greg},
   journal={Journal of Functional Programming},
@@ -44,7 +94,7 @@
   year={2000}
 }
 
-@misc{ref6,
+@misc{ref11,
   author={Ros, Greg},
   title={parjs: Parser Combinator Library},
   year={2020},
@@ -52,10 +102,21 @@
   note={Accessed 2020-11-19}
 }
 
-@misc{ref7,
+@misc{ref12,
   author={Plaindoux, Didier and Zozol, Nicolas},
   title={masala-parser: {J}avascript Parser Combinators},
   year={2020},
   url={https://github.com/masala/masala-parser},
   note={Accessed 2020-11-19}
+}
+
+@article{ref13,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
 }
