Update Progress Report

--- a/docs/progressreport/index.bib
+++ b/docs/progressreport/index.bib
@@ -6,62 +6,17 @@
   year={2003}
 }
 
-@inproceedings{ref2,
-  title={Refactoring for parameterizing {J}ava classes},
-  author={Kiezun, Adam and Ernst, Michael D and Tip, Frank and Fuhrer, Robert M},
-  booktitle={29th International Conference on Software Engineering (ICSE'07)},
-  pages={437--446},
-  year={2007},
-  organization={IEEE}
+@article{ref2,
+  title={The principal type-scheme of an object in combinatory logic},
+  author={Hindley, Roger},
+  journal={Transactions of the american mathematical society},
+  volume={146},
+  pages={29--60},
+  year={1969},
+  publisher={JSTOR}
 }
 
-@misc{ref3,
-  title={Trends for {T}ype{S}cript, mypy and {P}ython typing},
-  author={{Google Trends}},
-  url={https://trends.google.com/trends/explore?date=2015-01-01\%202020-09-30\&q=\%2Fm\%2F0n50hxv,mypy,python\%20typing},
-  year={2020},
-  note={Accessed 2020-11-21}
-}
-
-@inproceedings{ref4,
-  title={TypeTool: A type inference visualization tool},
-  author={Simoes, Hugo and Florido, M{\textbackslash'a}rio},
-  booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
-  pages={48--61},
-  year={2004},
-  organization={Citeseer}
-}
-
-@article{ref5,
-  title={TILC: The interactive lambda-calculus tracer},
-  author={Ruiz, David and Villaret, Mateu},
-  journal={Electronic Notes in Theoretical Computer Science},
-  volume={248},
-  pages={173--183},
-  year={2009},
-  publisher={Elsevier}
-}
-
-@inproceedings{ref6,
-  title={TypeTool: A type inference visualization tool},
-  author={Simoes, Hugo and Florido, M{\textbackslash'a}rio},
-  booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
-  pages={48--61},
-  year={2004},
-  organization={Citeseer}
-}
-
-@article{ref7,
-  title={A visualisation of polymorphic type checking},
-  author={Jung, Yang and Michaelson, Greg},
-  journal={Journal of Functional Programming},
-  volume={10},
-  number={1},
-  pages={57--75},
-  year={2000}
-}
-
-@article{ref8,
+@article{ref3,
   title={A theory of type polymorphism in programming},
   author={Milner, Robin},
   journal={Journal of computer and system sciences},
@@ -72,7 +27,18 @@
   publisher={Elsevier}
 }
 
-@article{ref9,
+@article{ref4,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@article{ref5,
   title={Proofs about a folklore let-polymorphic type inference algorithm},
   author={Lee, Oukseh and Yi, Kwangkeun},
   journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
@@ -83,26 +49,52 @@
   publisher={ACM New York, NY, USA}
 }
 
+@book{ref6,
+  title={Top quality type error messages},
+  author={Heeren, Bastiaan J},
+  year={2005},
+  publisher={Utrecht University}
+}
+
+@inproceedings{ref7,
+  title={TypeTool: A type inference visualization tool},
+  author={Simoes, Hugo and Florido, Mário},
+  booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
+  pages={48--61},
+  year={2004},
+  organization={Citeseer}
+}
+
+@article{ref8,
+  title={TILC: The interactive lambda-calculus tracer},
+  author={Ruiz, David and Villaret, Mateu},
+  journal={Electronic Notes in Theoretical Computer Science},
+  volume={248},
+  pages={173--183},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@inproceedings{ref9,
+  title={TypeTool: A type inference visualization tool},
+  author={Simoes, Hugo and Florido, Mário},
+  booktitle={WFLP’04: Proc. 13th Intl. Workshop on Functional and (Constraint) Logic Programming, H. Kuchen, Ed. RWTH Aachen, Dept. Comp. Sc., Technical report AIB-2004-05},
+  pages={48--61},
+  year={2004},
+  organization={Citeseer}
+}
+
 @article{ref10,
-  title={Complete and easy bidirectional typechecking for higher-rank polymorphism},
-  author={Dunfield, Joshua and Krishnaswami, Neelakantan R},
-  journal={ACM SIGPLAN Notices},
-  volume={48},
-  number={9},
-  pages={429--442},
-  year={2013},
-  publisher={ACM New York, NY, USA}
+  title={A visualisation of polymorphic type checking},
+  author={Jung, Yang and Michaelson, Greg},
+  journal={Journal of Functional Programming},
+  volume={10},
+  number={1},
+  pages={57--75},
+  year={2000}
 }
 
 @misc{ref11,
-  author={{Stack Overflow}},
-  title={{S}tack {O}verflow Developer Survey},
-  year={2020},
-  url={https://insights.stackoverflow.com/survey/2020},
-  note={Accessed 2020-11-21}
-}
-
-@misc{ref12,
   author={Ros, Greg},
   title={parjs: Parser Combinator Library},
   year={2020},
@@ -110,7 +102,7 @@
   note={Accessed 2020-11-19}
 }
 
-@misc{ref13,
+@misc{ref12,
   author={Plaindoux, Didier and Zozol, Nicolas},
   title={masala-parser: {J}avascript Parser Combinators},
   year={2020},
@@ -118,18 +110,13 @@
   note={Accessed 2020-11-19}
 }
 
-@misc{ref14,
-  author={Lazic, Ranko},
-  title={{CS}310 Third Year Project Teaching Material},
-  year={2020},
-  url={https://warwick.ac.uk/fac/sci/dcs/teaching/material/cs310},
-  note={Accessed 2020-11-21}
-}
-
-@misc{ref15,
-  author={Jones, Adam},
-  title={gdoc2latex: Convert Google Docs files to LaTeX},
-  year={2020},
-  url={https://github.com/domdomegg/gdoc2latex},
-  note={Accessed 2020-11-21}
+@article{ref13,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
 }
