--- a/language/package.json
+++ b/language/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "algorithm-w",
+  "name": "language",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
     "test": "jest"
   },
+  "main": "./dist/index",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.1",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "@types/jest": "^26.0.16",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@masala/parser": "^1.0.0"
