--- a/language/package.json
+++ b/language/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algorithm-w",
+  "name": "language",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
@@ -15,6 +15,6 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "language": "file:../language"
+    "@masala/parser": "^1.0.0"
   }
 }
