--- a/language/package.json
+++ b/language/package.json
@@ -15,6 +15,6 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@masala/parser": "^1.0.0"
+    "@domdomegg/masala-parser": "^1.0.1"
   }
 }
