Update final report

--- a/docs/finalreport/start.tex
+++ b/docs/finalreport/start.tex
@@ -26,8 +26,6 @@
 \usepackage{minted}
 \usepackage{ragged2e}
 \usepackage{adjustbox}
-\definecolor{cs310lightgrey}{rgb}{0.95,0.95,0.95}
-\usepackage[backgroundcolor=cs310lightgrey,hidealllines=true]{mdframed}
 
 \hypersetup{
 	colorlinks=true,
@@ -36,8 +34,9 @@
 	citecolor=black
 }
 
-\BeforeBeginEnvironment{minted}{\begin{mdframed}}
-\AfterEndEnvironment{minted}{\end{mdframed}}
+\definecolor{lightgrey}{rgb}{0.95,0.95,0.95}
+\setminted{bgcolor=lightgrey}
+\setmintedinline{bgcolor=lightgrey,escapeinside=||,mathescape=true}
 
 \let\parencite\citep
 
